--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container-fluid">
           <h1 class="navbar-brand fw-bold">
-            <a href="#">Tasky</a>
+            <a href="#" contenteditable="true">Tasky</a>
           </h1>
           <button 
             class="navbar-toggler" 
